--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -10,35 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bebdc865-ca98-482a-8910-afc46fbaaff8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65ee9822-a99e-4480-94d6-dcb42f4b9698",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "9c99e578-7c0a-4a8b-bb1c-b9d7c696606e",
    "metadata": {},
@@ -57,10 +28,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c06652-b56c-4b79-a47a-e98719ee9f38",
+   "id": "3d3af8bd-c2c5-41da-8bac-ccb0e358a88c",
    "metadata": {},
    "source": [
-    "# Pandas\n",
+    "# Introduction to Pandas\n",
     "Pandas is a framework for importing, creating and manipulating data."
    ]
   },
@@ -76,10 +47,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb98e651-1820-4a1d-8f79-a61fe461aecb",
+   "id": "3a176448-1844-451a-9b13-a0c8af4158ec",
    "metadata": {},
    "source": [
-    "## How to create and read series in Pandas"
+    "### How to create and read series in Pandas"
    ]
   },
   {
@@ -211,13 +182,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a740ff85-241d-4f28-9b58-957d236ddb73",
+   "cell_type": "markdown",
+   "id": "2461e675-6fba-4f42-b406-6cc6a24256fe",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## How to create and read data frames in Pandas"
+    "### How to create and read data frames in Pandas"
    ]
   },
   {
@@ -311,10 +280,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21db4d9-6829-4b5e-b653-c3dc9d9a33a0",
+   "id": "f4cad772-d32c-4fb5-ae12-96138b15f801",
    "metadata": {},
    "source": [
-    "## How to export data frames to CSV files"
+    "### How to export data frames to CSV files"
    ]
   },
   {
@@ -329,10 +298,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd2098b-65e3-407e-b66d-2e3e0e424969",
+   "id": "b59e543a-f14f-4909-b604-da0c8074790c",
    "metadata": {},
    "source": [
-    "## How to import and read CSV files"
+    "### How to import and read CSV files"
    ]
   },
   {
@@ -427,10 +396,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73a5ee6d-ea98-4be6-9a98-52ddab315c81",
+   "id": "d9f666ca-9559-4276-88a0-46b2593515e8",
    "metadata": {},
    "source": [
-    "## How to import and read CSV files from internet"
+    "### How to import and read CSV files from internet"
    ]
   },
   {
@@ -711,10 +680,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9413c15e-f2f2-4c75-b905-1a5c279ceaa8",
+   "id": "86f79f29-d15b-4357-9805-c52d92592d0b",
    "metadata": {},
    "source": [
-    "## Get avagage from data"
+    "### Get avagage from data"
    ]
   },
   {
@@ -742,10 +711,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3f1e33-894d-4d7a-adea-9e25960a3722",
+   "id": "174ad31c-365b-4ec9-90af-0666e306f928",
    "metadata": {},
    "source": [
-    "## Describe data"
+    "### Describe data"
    ]
   },
   {
@@ -957,10 +926,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2032dd51-0582-4988-8ec2-aae582f1c6c5",
+   "id": "dbf3e669-4970-4034-9d0f-e75a1c881761",
    "metadata": {},
    "source": [
-    "## Viewing and selecting data"
+    "### Viewing and selecting data"
    ]
   },
   {
@@ -1532,7 +1501,7 @@
    "id": "8005bc90-857d-4d93-8412-867407d418c0",
    "metadata": {},
    "source": [
-    "## Using Matplotlib with Pandas"
+    "### Using Matplotlib with Pandas"
    ]
   },
   {
@@ -1609,7 +1578,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\$'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\$'\n",
-      "/var/folders/kj/qfyyl25n4jb33f597prslb5h0000gn/T/ipykernel_10330/3668825535.py:1: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "/var/folders/kj/qfyyl25n4jb33f597prslb5h0000gn/T/ipykernel_59386/3668825535.py:1: SyntaxWarning: invalid escape sequence '\\$'\n",
       "  car_sales[\"PriceAsInt\"] = car_sales[\"Price\"].str[:-2].replace('[\\$\\,\\.]', '', regex=True).astype(int)\n"
      ]
     },
@@ -1717,7 +1686,7 @@
    "id": "f2f44349-ec43-4008-9bbe-d557f8666537",
    "metadata": {},
    "source": [
-    "## Shuffled Data"
+    "### Shuffled Data"
    ]
   },
   {
@@ -1757,24 +1726,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Honda</td>\n",
-       "      <td>White</td>\n",
-       "      <td>150043.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>$4,000.00</td>\n",
-       "      <td>4000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>$22,000.00</td>\n",
-       "      <td>22000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ford</td>\n",
        "      <td>Blue</td>\n",
@@ -1782,6 +1733,15 @@
        "      <td>3</td>\n",
        "      <td>$7,000.00</td>\n",
        "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "      <td>4000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1792,16 +1752,25 @@
        "      <td>$5,000.00</td>\n",
        "      <td>5000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>$22,000.00</td>\n",
+       "      <td>22000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     Make Colour  Odometer (KM)  Doors       Price  PriceAsInt\n",
-       "0   Honda  White       150043.0      4   $4,000.00        4000\n",
-       "3     NaN  Black            NaN      5  $22,000.00       22000\n",
        "2    Ford   Blue        32549.0      3   $7,000.00        7000\n",
-       "1  Nissan    Red        87899.0      4   $5,000.00        5000"
+       "0   Honda  White       150043.0      4   $4,000.00        4000\n",
+       "1  Nissan    Red        87899.0      4   $5,000.00        5000\n",
+       "3     NaN  Black            NaN      5  $22,000.00       22000"
       ]
      },
      "execution_count": 45,
@@ -1815,18 +1784,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1868af2-737a-4a9f-829a-0488430fdcad",
-   "metadata": {},
-   "source": [
-    "## Remove NaN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fec42297-e3b9-4330-8372-876665738631",
    "metadata": {},
    "source": [
-    "## Fill NaN"
+    "### Fill NaN"
    ]
   },
   {
@@ -1937,7 +1898,7 @@
    "id": "18de5a64-0a3d-4ada-a996-f9a8f37f2087",
    "metadata": {},
    "source": [
-    "## Remove NaN"
+    "### Remove NaN"
    ]
   },
   {
@@ -2029,12 +1990,12 @@
    "id": "ebdec389-f606-4899-a226-399e63cc7b87",
    "metadata": {},
    "source": [
-    "## Manipulate data"
+    "### Manipulate data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 53,
    "id": "4fbc20b2-66c2-4b56-8386-4679811fd992",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2003,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kj/qfyyl25n4jb33f597prslb5h0000gn/T/ipykernel_10330/490503260.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/kj/qfyyl25n4jb33f597prslb5h0000gn/T/ipykernel_59386/490503260.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2087,7 +2048,7 @@
        "      <td>150043.0</td>\n",
        "      <td>4</td>\n",
        "      <td>$4,000.00</td>\n",
-       "      <td>6000</td>\n",
+       "      <td>5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2096,7 +2057,7 @@
        "      <td>87899.0</td>\n",
        "      <td>4</td>\n",
        "      <td>$5,000.00</td>\n",
-       "      <td>7000</td>\n",
+       "      <td>6000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2105,7 +2066,7 @@
        "      <td>32549.0</td>\n",
        "      <td>3</td>\n",
        "      <td>$7,000.00</td>\n",
-       "      <td>9000</td>\n",
+       "      <td>8000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2113,12 +2074,12 @@
       ],
       "text/plain": [
        "     Make Colour  Odometer (KM)  Doors      Price  PriceAsInt\n",
-       "0   Honda  White       150043.0      4  $4,000.00        6000\n",
-       "1  Nissan    Red        87899.0      4  $5,000.00        7000\n",
-       "2    Ford   Blue        32549.0      3  $7,000.00        9000"
+       "0   Honda  White       150043.0      4  $4,000.00        5000\n",
+       "1  Nissan    Red        87899.0      4  $5,000.00        6000\n",
+       "2    Ford   Blue        32549.0      3  $7,000.00        8000"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,9 +2090,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdad31a0-ad04-4e43-80e3-493c788facdf",
+   "metadata": {},
+   "source": [
+    "# Introduction to Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "20c184f5-8768-4186-9f12-4d4d24ad7226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e1ccbd-0142-4191-8fef-7afa1bb21df7",
+   "id": "2188eaec-b188-4dfc-affa-c4b41479e9ed",
    "metadata": {},
    "outputs": [],
    "source": []
